--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "nestjs-app",
   "version": "0.0.1",
-  "description": "",
-  "author": "",
+  "author": "Ahmed Saleem Shaikh",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
@@ -21,7 +20,9 @@
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.2.1",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/jwt": "^10.2.0",
     "@nestjs/platform-express": "^10.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
